--- a/styles/globals.css
+++ b/styles/globals.css
@@ -38,16 +38,6 @@ body {
   -webkit-print-color-adjust: exact !important;
 }
 
-.my-container {
-  overflow-x: scroll;
-  width: auto;
-  /* border: solid 1px black;
-  border-radius: 4px;
-  -webkit-border-radius: 4px;
-  -moz-border-radius: 4px;
-  -ms-border-radius: 4px;
-  -o-border-radius: 4px; */
-}
 
 .my-container::-webkit-scrollbar {
   width: 12px;
@@ -86,13 +76,17 @@ body {
   line-height: 1.2;
 }
 
+.my-container {
+  overflow-x: scroll;
+  width: auto;
+}
+
 .table-grid {
   display: grid;
   width: 90%;
   column-gap: 16px !important ;
   grid-template-columns: auto;
   margin: 0px auto;
-  padding: 0 15px;
 }
 
 #tableTitle {
@@ -116,7 +110,7 @@ body {
   width: 100%;
   display: grid;
   align-items: center;
-  grid-template-columns: 60px repeat(5, 1fr);
+  grid-template-columns: 60px repeat(2, 1fr) 2fr repeat(2, 1fr) ;
   /* on edit dont forget to edit the print media  */
   grid-auto-rows: minmax(60px, auto);
   column-gap: 16px !important ;
@@ -140,23 +134,6 @@ body {
   padding-right: .7rem;
 }
 
-
-.row-grid-day-print {
-  width: 100%;
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-auto-rows: minmax(60px, auto);
-  justify-items: center;
-  background-color: rgba(255, 255, 255, 0.8);
-  margin: auto 4px;
-}
-
-@media print {
-  .row-grid-day-print {
-    margin: auto ;
-  }
-}
-
 .row-grid-note {
   display: grid;
   grid-template-columns: 60px 1fr 60px;
@@ -168,6 +145,64 @@ body {
   margin: auto 4px;
 }
 
+.row-grid-day-print {
+  width: 100%;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-auto-rows: minmax(60px, auto);
+  justify-items: center;
+  background-color: rgba(255, 255, 255, 0.8);
+  margin: auto 4px;
+}
+
+.printpage{
+  margin-right: 12px;
+}
+
+.printpage .row-grid {
+  width: 100%;
+  padding: 0 15px;
+  grid-template-columns: 1fr repeat(3, 2fr) 1fr;
+  /* on edit dont forget to edit the print media  */
+  grid-auto-rows: minmax(60px, auto);
+  /* gap: 3px; */
+  justify-items: center;
+  background-color: rgba(255, 255, 255, 0.8);
+  border-bottom: solid 1px rgba(0, 0, 0, 0.2);
+  margin: auto 4px;
+}
+.printpage .row-grid-day {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-auto-rows: minmax(60px, auto);
+  justify-items: center;
+  background-color: rgba(255, 255, 255, 0.8);
+  border-bottom: solid 1px rgba(0, 0, 0, 0.2);
+  margin: auto 4px;
+}
+.printpage .noprintdplay {
+  visibility: unset;
+  display: none;
+}
+
+@media print {
+  .printpage .row-grid {
+    margin: 0;
+    grid-template-columns: 1fr repeat(3, 2fr) 1fr ;
+    align-items: center;
+  }
+  .printpage .row-grid-day {
+    grid-template-columns: 1fr;
+  }
+}
+
+@media print {
+  .row-grid-day-print {
+    margin: auto ;
+  }
+}
+
+
 .shadow-xl {
   --tw-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1),
     0 8px 10px -6px rgb(0 0 0 / 0.1);
@@ -176,6 +211,74 @@ body {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000),
     var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
+
+/* Start responcive */
+/* @media (max-width: 768px) {
+  
+} */
+
+/* ≥576px	 */
+@media (max-width: 576px) {
+  /* #tableTitle span {
+    font-size: 12px;
+  } */
+
+  .table-grid{
+    margin: 0px 8px;
+  }
+
+  /* .row-grid {
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-areas: "tools  tools . " " tools tools . ";
+    grid-auto-rows: minmax(60px, auto);
+  } */
+  /* on edit dont forget to edit the print media  */
+  /* grid-template-columns: 60px 1fr repeat(3, 2fr) 1fr ; */
+  .tools {
+    grid-area: "tools";
+  }
+  /* .row-grid */
+}
+
+/* <400px */
+@media (max-width: 400px) {
+  #tableTitle span {
+    font-size: 12px;
+    font-weight: 600;
+  }
+}
+
+@media (max-width: 576px) {
+  .printpage .row-grid {
+    grid-template-columns: 1fr repeat(3, 2fr) 1fr;
+        /* on edit dont forget to edit the print media  */
+    grid-auto-rows: minmax(60px, auto);
+  }
+}
+
+/* DND STYLING */
+.dragging {
+  opacity: 0.3;
+  transition: 200ms;
+  -webkit-transition: 200ms;
+  -moz-transition: 200ms;
+  -ms-transition: 200ms;
+  -o-transition: 200ms;
+}
+
+.hello {
+  opacity: 0.99;
+  transition: 200ms;
+  -webkit-transition: 200ms;
+  -moz-transition: 200ms;
+  -ms-transition: 200ms;
+  -o-transition: 200ms;
+}
+
+.testing {
+  background-color: white;
+}
+
 
 /*=========== color picker ============*/
 
@@ -191,8 +294,6 @@ body {
   font-weight: 100;
   border-radius: 8px;
   border: 2px solid;
-  /* box-shadow: 0 0 0 1px rgb(87, 86, 86), inset 0 0 0 1px rgb(87, 86, 86); */
-  /* color: rgb(87, 86, 86); */
   cursor: pointer;
   background-color: white;
 }
@@ -224,108 +325,4 @@ body {
   background-color: rgba(255, 255, 255, 0.9);
   width: fit-content;
   cursor: pointer;
-}
-/* Start responcive */
-/* @media (max-width: 768px) {
-  
-} */
-
-/* ≥576px	 */
-@media (max-width: 576px) {
-  #tableTitle span {
-    font-size: 12px;
-  }
-
-  .table-grid{
-    width:auto;
-  }
-
-  /* .row-grid {
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-areas: "tools  tools . " " tools tools . ";
-    grid-auto-rows: minmax(60px, auto);
-  } */
-  /* on edit dont forget to edit the print media  */
-  /* grid-template-columns: 60px 1fr repeat(3, 2fr) 1fr ; */
-  .tools {
-    grid-area: "tools";
-  }
-  /* .row-grid */
-}
-/* <400px */
-@media (max-width: 400px) {
-  #tableTitle span {
-    font-size: 12px;
-    font-weight: 600;
-  }
-}
-
-.printpage .row-grid {
-  padding: 0 0 0 15px;
-  grid-template-columns: 1fr repeat(3, 2fr) 1fr;
-  /* on edit dont forget to edit the print media  */
-  grid-auto-rows: minmax(60px, auto);
-  /* gap: 3px; */
-  justify-items: center;
-  background-color: rgba(255, 255, 255, 0.8);
-  border-bottom: solid 1px rgba(0, 0, 0, 0.2);
-  margin: auto 4px;
-}
-.printpage .row-grid-day {
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-auto-rows: minmax(60px, auto);
-  justify-items: center;
-  background-color: rgba(255, 255, 255, 0.8);
-  border-bottom: solid 1px rgba(0, 0, 0, 0.2);
-  margin: auto 4px;
-}
-.printpage .noprintdplay {
-  visibility: unset;
-  display: none;
-}
-@media (max-width: 576px) {
-  .printpage .row-grid {
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-areas: ". . . " " . . . ";
-    /* on edit dont forget to edit the print media  */
-    grid-auto-rows: minmax(60px, auto);
-  }
-}
-@media print {
-  .printpage .row-grid {
-    margin: 0;
-    grid-template-columns: 1fr repeat(3, 2fr) 1fr 0;
-    align-items: center;
-    /* grid-template-columns: 100px repeat(3, 200px) 100px ; */
-  }
-  .printpage .row-grid-day {
-    grid-template-columns: 1fr;
-  }
-  .printpage .row-grid {
-    grid-template-areas: unset;
-  }
-}
-
-.dragging {
-  opacity: 0.3;
-  transition: 200ms;
-  -webkit-transition: 200ms;
-  -moz-transition: 200ms;
-  -ms-transition: 200ms;
-  -o-transition: 200ms;
-}
-
-.hello {
-  /* background-color : transparent; */
-  opacity: 0.99;
-  transition: 200ms;
-  -webkit-transition: 200ms;
-  -moz-transition: 200ms;
-  -ms-transition: 200ms;
-  -o-transition: 200ms;
-}
-
-.testing {
-  background-color: white;
 }
