--- a/styles/globals.css
+++ b/styles/globals.css
@@ -39,17 +39,17 @@ body {
 }
 
 
-.my-container::-webkit-scrollbar {
+/* .my-container::-webkit-scrollbar {
   width: 12px;
-}
+} */
 
-.my-container::-webkit-scrollbar-thumb {
+/* .my-container::-webkit-scrollbar-thumb {
   position: fixed;
   top: 0rem;
   background-color: rgb(90, 90, 90);
   border: 1px solid black;
   border-radius: 20px;
-}
+} */
 
 /* this is for hiding the textare scroll bar */
 .scroll::-webkit-scrollbar {
@@ -77,7 +77,7 @@ body {
 }
 
 .my-container {
-  overflow-x: scroll;
+  overflow-x: visible;
   width: auto;
 }
 
