--- a/styles/globals.css
+++ b/styles/globals.css
@@ -92,6 +92,14 @@ body {
   width: 768px;
 }
 
+.draggable-line{
+  transition: 0.2s;
+  -webkit-transition: 0.2s;
+  -moz-transition: 0.2s;
+  -ms-transition: 0.2s;
+  -o-transition: 0.2s;
+}
+
 #tableTitle {
   margin-bottom: 1.5rem;
   background-color: rgb(49, 47, 47);
@@ -265,23 +273,19 @@ body {
 
 /* DND STYLING */
 .dragging {
-  opacity: 0;
-  transition: 10ms;
-  -webkit-transition: 10ms;
-  -moz-transition: 10ms;
-  -ms-transition: 10ms;
-  -o-transition: 10ms;
+  opacity: 1;
+  padding-top: 3rem ;
 }
 
 .hello {
   opacity: 0;
   width: 1px;
   height: 1px;
-  transition: 300ms;
-  -webkit-transition: 300ms;
-  -moz-transition: 300ms;
-  -ms-transition: 300ms;
-  -o-transition: 300ms;
+  transition: 10ms;
+  -webkit-transition: 10ms;
+  -moz-transition: 10ms;
+  -ms-transition: 10ms;
+  -o-transition: 10ms;
 }
 
 .testing {
