--- a/styles/globals.css
+++ b/styles/globals.css
@@ -86,10 +86,11 @@ body {
   column-gap: 16px !important ;
   grid-template-columns: auto;
   margin: 0px auto;
+  width: 85%;
 }
 
 .lines-width{
-  max-width: 768px;
+  max-width: 850px;
 }
 
 .draggable-line{
